# DSPyder-web

./: .gitignore  README.md
hdbrag_dspy_optimized/: README.md  app.py  pyproject.toml  rag_optimizer.py  save_split.py  test_retriever.py
hdbrag_dspy_optimized/docs/: AI_AGENT_WORKFLOW.md  DATA_INGESTION_GUIDE.md  DSPY_GUIDE.md  INTERVIEW_PREP.md  LLAMA_INDEX_GUIDE.md  RAG_ADVANCED_TECHNIQUES.md  architecture.md
hdbrag_dspy_optimized/notebooks/: demo_dspy.ipynb
hdbrag_dspy_optimized/src/: model.py  retriever.py  signatures.py
hdbrag_dspy_optimized/src/ingestion/: hdb_downloader.py  html_parser.py  qa_generator.py
